# gigatron-web

./: .gitignore  README.md
gigatronemulator/: composer.json  ext.php
gigatronemulator/build-emulator-WASM_c-Debug/: .qmake.stash  Makefile
gigatronemulator/config/: routing.yml  services.yml
gigatronemulator/controller/: main.php
gigatronemulator/emulator/: autoload.js  emulator-audio.js  emulator-controls.js  emulator.cpp  emulator.h  emulator.js  emulator.pro  file-browser.js  makefile  qt2.xml  scan_files.php  styles.css  ui-manager.js  virtual-keyboard.css  virtual-keyboard.js
gigatronemulator/event/: main_listener.php
gigatronemulator/gt1/: categories.ini
gigatronemulator/roms/: ROMv1.ini  ROMv2.ini  ROMv3.ini  ROMv4.ini  ROMv5a.ini  ROMv6.ini  ROMvX0.ini  SDCARD.ini  SDCARD.rom  dev.ini  dev.rom  roms.ini  theloop.2.ini
gigatronrombuilder/: composer.json  ext.php
gigatronrombuilder/config/: routing.yml  services.yml
gigatronrombuilder/controller/: main.php
gigatronrombuilder/event/: main_listener.php
gigatronrombuilder/romdeps/Core/: Reset_v4.gcl  Reset_v5.gcl  Reset_v6.gcl
gigatronrombuilder/romsrc/: ROMv1.asm.py  ROMv2.asm.py  ROMv3.asm.py  ROMv4.asm.py  ROMv5a.asm.py  ROMv5a_6502.asm.py  SymbolTable.m  interface.json  manifest.ini
gigatronrombuilder/tools/: mainmenu_v5a.gasm  mainmenu_v5a.gbas  mainmenu_v5a.gt1  mainmenu_v6.gasm  mainmenu_v6.gbas  mainmenu_v6.gt1  mainmenu_vX0.gasm  mainmenu_vX0.gbas  mainmenu_vX0.gt1
gigatronrombuilder/tools/gtASM/: CMakeLists.txt  gtasm.cpp
gigatronrombuilder/tools/gtBASIC/: CMakeLists.txt  gtbasic.cpp
gigatronshowcase/: composer.json  ext.php  featured.ini  featured_shuffle.ini  whitelist.ini
gigatronshowcase/config/: routing.yml  services.yml
gigatronshowcase/controller/: content.php  featured.php  gt1.php  main.php  rom.php  security.php  user.php  utils.php
gigatronshowcase/event/: main_listener.php
(+376 files in other folders)
